@@ -1,0 +1,3 @@
+<!-- just for test. not real dtd -->
+
+<!ELEMENT bar ANY>
