@@ -1,0 +1,35 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema">
+   <xs:annotation>
+      <xs:documentation>
+		This XML schema autogenerate by DTD2XML
+		Written © Eugene Efremov, 2009-2010
+		
+		Original DTD properties:
+			SYSTEM: test.dtd
+		
+		</xs:documentation>
+   </xs:annotation>
+   <xs:element name="foo">
+      <xs:complexType mixed="true">
+         <xs:sequence minOccurs="0" maxOccurs="unbounded">
+            <xs:any processContents="lax"/>
+         </xs:sequence>
+      </xs:complexType>
+   </xs:element>
+   <xs:element name="bar">
+      <xs:complexType mixed="true">
+         <xs:sequence minOccurs="0" maxOccurs="unbounded">
+            <xs:any processContents="lax"/>
+         </xs:sequence>
+      </xs:complexType>
+   </xs:element>
+   <xs:element name="test">
+      <xs:complexType>
+         <xs:sequence minOccurs="0" maxOccurs="unbounded">
+            <xs:element ref="foo"/>
+            <xs:element ref="bar"/>
+         </xs:sequence>
+      </xs:complexType>
+   </xs:element>
+</xs:schema>
