@@ -1,5 +1,10 @@
 ﻿$Revision$
 	$Author$ $Date$
+	- URIALIAS — аналог rewriteURI из xmlcatalog.
+	- unit tests
+	
+#Revision: 1444
+	formirror 2010-03-09 23:33:50 +0300 (Вт, 09 мар 2010) 
 	1. Добавил в dtd2xml.pl поддержку .properties:
 		- ключ --p:name=value
 		- обработака файлов /\.prop(erites)?$/
